fix if i use two account and  logged out  from the firdt and use the secound i see the favourites meals of the secound and his plan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
 
     <!-- Profile -->
     <string name="guest_user">Guest User</string>
+    <string name="guest_mode_title">Guest Mode</string>
     <string name="backup_data">Backup Data</string>
     <string name="restore_data">Restore Data</string>
     <string name="backup_success">Data backed up successfully</string>
